Started building out pages and added testing code.

--- a/TypeScriptDemo/index.html
+++ b/TypeScriptDemo/index.html
@@ -21,6 +21,10 @@
     </div>
     <div id="content" class="page-wrapper"></div>
 
+    <div id="script-bucket">
+
+    </div>
+
     <script type="text/javascript" language="javascript" src="app-loader.js"></script>
 </body>
 </html>
