--- a/TypeScriptDemo/pages/hello-world.html
+++ b/TypeScriptDemo/pages/hello-world.html
@@ -1,35 +1,40 @@
 ﻿<div class="page">
-    <h2>Hello World Example</h2>
-    <table cellpadding="0" cellspacing="0">
-        <tbody>
-            <tr>
-                <td width="*">
-                    <div class="code-header">TypeScript</div>
-                    <div class="code-wrapper">
-                        <code id="code-hello-world-source" class="typescript">
-                        </code>
-                    </div>
-                </td>
-                <td width="120">
-                    <div class="transpile-wrapper">
-                        <div id="grinder-handle" class="img-grinder-handle"></div>
-                        <div class="img-grinder-main"></div>
-                    </div>
-                </td>
-                <td width="*">
-                    <div class="code-header">JavaScript</div>
-                    <div class="code-wrapper">
-                        <code id="code-hello-world-compiled" class="javascript">
-                        </code>
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <br />
-    <br />
-    <div id="hello-world-results" class="result-wrapper hidden">        
-        <h2>Transpiled Functionality</h2>
-        <input id="input-click-me" type="button" onclick="javascript:HelloWorld.execute()" value="Click Me" />
+    <div class="page-section">
+        <h2>Hello World Example</h2>
+        <p>
+            This is the requisite "Hello World" example for the demonstration.  The TypeScript code is defining a global namespace and exporting a single <i>execute</i> function.
+            That function is simply alerting the value <i>"Hello, world!"</i>.  In the <i>Transpiled Functionality</i> area, that function is wired to the "Click Me" button's click event via "javascript:HelloWorld.execute()".
+        </p>
+        <table cellpadding="0" cellspacing="0">
+            <tbody>
+                <tr>
+                    <td width="*">
+                        <div class="code-header">TypeScript</div>
+                        <div class="code-wrapper">
+                            <code id="code-hello-world-source" class="typescript">
+                            </code>
+                        </div>
+                    </td>
+                    <td width="120">
+                        <div class="transpile-wrapper">
+                            <div id="grinder-handle" class="img-grinder-handle"></div>
+                            <div class="img-grinder-main"></div>
+                        </div>
+                    </td>
+                    <td width="*">
+                        <div class="code-header">JavaScript</div>
+                        <div class="code-wrapper">
+                            <code id="code-hello-world-compiled" class="javascript">
+                            </code>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <br />
+        <div id="hello-world-results" class="result-wrapper hidden">
+            <h2>Transpiled Functionality</h2>
+            <input id="input-click-me" type="button" onclick="javascript:HelloWorld.execute()" value="Click Me" />
+        </div>
     </div>
 </div>
