Started building out my first typescript app section.

--- a/TypeScriptDemo/pages/getting-started.html
+++ b/TypeScriptDemo/pages/getting-started.html
@@ -49,9 +49,9 @@
                 <img src="../img/jasmine-logo.png" />
             </a>
             <br />
-            <a href="https://jasmine.github.io/" target="_blank">Jasmine</a> is a great testing framework that was developed for JavaScript.  Since TypeScript transpiles down to JavaScript, it works equally
+            <a href="https://jasmine.github.io/" target="_blank">Jasmine</a> is a behavior-driven testing framework that was developed for JavaScript.  Since TypeScript transpiles down to JavaScript, it works equally
             well for testing your TypeScript code.  The testing syntax can be supported by importing the @types/jasmine module from NPM.  <a href="https://jasmine.github.io/" target="_blank">Jasmine</a>
-            is looked at in more detail later in this presentation.
+            is covered in more detail later in this presentation.
         </p>
     </div>
 </div>
