--- a/TypeScriptDemo/index.html
+++ b/TypeScriptDemo/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/app.css" type="text/css" />
     <link rel="stylesheet" href="style/highlightjs/monokai-sublime.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
+    <script src="lib/highlightjs/highlight.min.js"></script>
     <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
     <script src="node_modules/systemjs/dist/system.js"></script>
 </head>
