Added a couple more code example pages.

--- a/TypeScriptDemo/pages/type-declaration.html
+++ b/TypeScriptDemo/pages/type-declaration.html
@@ -121,26 +121,30 @@
         </table>
     </div>
     <div id="page-section-3" class="page-section">
-        <h2>Generics &amp; Casting</h2>
+        <h2>Classes &amp; Inheritance</h2>
+        <p>
+            Arguable one of the greatest benefits of using TypeScript is the support of classes in the base syntax.  In JavaScript, inheritance like behavior is possible via object prototypes, but it is certainly not a straight forward implementation.
+            The TypeScript implementation of classes should looke very familiar if you've ever worked with Java or C#.  In the example below, we define an Animal class.  We then implement two inherited classes via the "extends" syntax and overwrite
+            some of the base functionality.  The resulting classes are then put to use in a simple demonstration.
+        </p>
         <table cellpadding="0" cellspacing="0">
             <tbody>
                 <tr>
                     <td width="*">
-                        <div class="code-header">TypeScript</div>
+                        <div class="code-header">TypeScript - classes-and-inheritance.ts</div>
                         <div class="code-wrapper">
-                            <code id="code-generics-source" class="typescript">
+                            <code id="code-classes-source" class="typescript">
                             </code>
                         </div>
                     </td>
                     <td width="120">
-                        <div class="transpile-wrapper">
-                            <input id="interfaces-transpile" type="button" value="Transpile ->" />
+                        <div class="transpile-wrapper">                           
                         </div>
                     </td>
                     <td width="*">
-                        <div class="code-header">JavaScript</div>
+                        <div class="code-header">Result</div>
                         <div class="code-wrapper">
-                            <code id="code-generics-compiled" class="javascript">
+                            <code id="code-unions-compiled" class="javascript">
                             </code>
                         </div>
                     </td>
@@ -149,26 +153,25 @@
         </table>
     </div>
     <div id="page-section-4" class="page-section">
-        <h2>Unions &amp; Type Guards</h2>
+        <h2>Generics &amp; Casting</h2>
         <table cellpadding="0" cellspacing="0">
             <tbody>
                 <tr>
                     <td width="*">
-                        <div class="code-header">TypeScript</div>
+                        <div class="code-header">TypeScript - generics-and-casting.ts</div>
                         <div class="code-wrapper">
-                            <code id="code-unions-source" class="typescript">
+                            <code id="code-generics-source" class="typescript">
                             </code>
                         </div>
                     </td>
                     <td width="120">
                         <div class="transpile-wrapper">
-                            <input id="interfaces-transpile" type="button" value="Transpile ->" />
                         </div>
                     </td>
                     <td width="*">
                         <div class="code-header">JavaScript</div>
                         <div class="code-wrapper">
-                            <code id="code-unions-compiled" class="javascript">
+                            <code id="code-generics-compiled" class="javascript">
                             </code>
                         </div>
                     </td>
