Added generics example and filled out the testing section.

--- a/TypeScriptDemo/pages/getting-started.html
+++ b/TypeScriptDemo/pages/getting-started.html
@@ -18,14 +18,14 @@
         <p>
             The rise of package management systems has greatly eased intregration of external dependencies in projects in the past decade or so.  In the javascript space, no system is more prominent 
             than <a href="https://nodejs.org/" target="_blank">Node.js</a> and <a href="https://www.npmjs.com/" target="_blank">NPM</a>.  To get the most out of TypeScript development, it is 
-            probably more of a requirement than a recommendation to install these products. <a href="https://nodejs.org/" target="_blank">Node.js</a> is available for most major platforms.  It
-            comes with a simple version of <a href="https://www.npmjs.com/" target="_blank">NPM</a> built-in, but the full version can be installed via the following command:
+            probably more of a requirement than a recommendation to install these products. Node.js is available for most major platforms.  It
+            comes with a simple version of NPM built-in, but the full version can be installed via the following command:
         </p>
         <div class="console-wrapper">
             <code id="code-install-npm">npm install npm -g</code>
         </div>        
         <p>
-            Once you have <a href="https://nodejs.org/" target="_blank">Node.js</a> and <a href="https://www.npmjs.com/" target="_blank">NPM</a> installed, you can leverage a lot of tooling to aid
+            Once you have Node.js and NPM installed, you can leverage a lot of tooling to aid
             in TypeScript development.  There are many module systems, build tools and testing tools, and Type Definitions for existing Javascript libraries the can be retrieved via NPM.  Additionally,
             if you create a package.json file for your project using &lsquo;npm init&rsquo; you can interact with packages using a dynamic user interface built into Visual Studio.
         </p>
@@ -50,8 +50,8 @@
             </a>
             <br />
             <a href="https://jasmine.github.io/" target="_blank">Jasmine</a> is a behavior-driven testing framework that was developed for JavaScript.  Since TypeScript transpiles down to JavaScript, it works equally
-            well for testing your TypeScript code.  The testing syntax can be supported by importing the @types/jasmine module from NPM.  <a href="https://jasmine.github.io/" target="_blank">Jasmine</a>
-            is covered in more detail later in this presentation.
+            well for testing your TypeScript code.  The testing syntax can be supported by importing the <a href="https://www.npmjs.com/package/@types/jasmine" target="_blank">@types/jasmine</a> module from NPM.  
+            Jasmine is covered in more detail later in this presentation.
         </p>
     </div>
 </div>
