--- a/TypeScriptDemo/pages/type-declaration.html
+++ b/TypeScriptDemo/pages/type-declaration.html
@@ -186,16 +186,8 @@
                         <div class="code-header">Result</div>
                         <div class="code-wrapper">
                             <div id="generics-result" class="fullscreen-result">
-                                <div id="generics-field" class="field-container">
-                                    <div class="field-grass"></div>
-                                    <div class="field-fence-top"></div>
-                                    <div class="field-fence-bottom"></div>
-                                    <div class="field-fence-post"></div>
-                                    <div class="field-fence-post two"></div>
-                                    <div class="field-fence-post three"></div>
-                                    <div class="field-fence-post four"></div>
-                                    <div class="field-fence-post five"></div>
-                                </div>
+                                <canvas id="generics-canvas" class="result-canvas" width="600" height="600">
+                                </canvas>
                             </div>
                         </div>
                     </td>
