Wrapped up add types styling, fixed a few typos.

--- a/TypeScriptDemo/pages/getting-started.html
+++ b/TypeScriptDemo/pages/getting-started.html
@@ -9,7 +9,7 @@
         <p>
             These products support TypeScript out of the box, but it is a good idea to make sure you have the latest version, which can be obtained from the following link:
             <a href="https://www.microsoft.com/en-us/download/details.aspx?id=48593" target="_blank">TypeScript for Visual Studio 2015</a>.
-            The development of TypeScript in the past few years has been very active and a lot of the features that were added in the 2.0 version really make working with the language much easier. 
+            The development of TypeScript in the past few years has been very active and a lot of the features that were added in the 2.0 version really makes working with the language much easier. 
             That being the case, you'll want to make sure you running the latest stable version.
         </p>        
     </div>
